# CSC324---Principles-of-Programming-Languages

a0-starter-files-wodugesi/starter/: Basics.hs  a0.cabal
a0-starter-files-wodugesi/starter/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
a0-starter-files-wodugesi/starter/dist-newstyle/packagedb/ghc-9.10.2/: a0-0.1.0.0-inplace-basics.conf  package.cache
a0-starter-files-wodugesi/starter/test/: BasicsTests.hs
